main/default/objects/pharos__Inbound_Email__c/fields/pharos__Error__c.field-meta.xml
<CustomField>
    <fullName>pharos__Error__c</fullName>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>