main/default/objects/pharos__Inbound_Email__c/fields/pharos__From__c.field-meta.xml
<CustomField>
    <fullName>pharos__From__c</fullName>
    <label>From</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>