main/default/objects/pharos__Inbound_Email__c/fields/pharos__Html_Body__c.field-meta.xml
<CustomField>
    <fullName>pharos__Html_Body__c</fullName>
    <label>Html Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>