main/default/objects/pharos__Inbound_Email__c/fields/pharos__Log__c.field-meta.xml
<CustomField>
    <fullName>pharos__Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log</label>
    <referenceTo>pharos__Log__c</referenceTo>
    <relationshipLabel>Inbound Emails</relationshipLabel>
    <relationshipName>Inbound_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>