main/default/objects/pharos__Inbound_Email__c/fields/pharos__Pharos_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>pharos__Pharos_Org_ID__c</fullName>
    <label>Pharos Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>