main/default/objects/pharos__Inbound_Email__c/fields/pharos__Plain_Text__c.field-meta.xml
<CustomField>
    <fullName>pharos__Plain_Text__c</fullName>
    <label>Plain Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>