main/default/objects/pharos__Inbound_Email__c/listViews/pharos__All.listView-meta.xml
<ListView>
    <fullName>pharos__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>